src/lib/antlr/CosmosParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Volumes/nFo/data/etml/codespace/csharp/cosmos/src/lib/../grammar/Cosmos.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace lib.antlr {
#pragma warning disable 3021
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CosmosParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, LABEL_AUTEUR=35, LABEL_DATE=36, CONTENU_DATE=37, 
		ENTREPRISE_ENTETE=38, DESCRIPTION_ENTETE=39, DEBUT=40, BIBLIOTHEQUE=41, 
		FIN=42, DE_LA_TRANSMISSION=43, ALLOUER_TERME=44, INITIALISATION_TERME=45, 
		ZONE_MEMOIRE=46, ZONE_NOM=47, OPERATEUR_COMPARAISON_EQUIVALENT=48, OPERATEUR_COMPARAISON_DIFFERENT=49, 
		OPERATEUR_COMPARAISON_PLUS_GRAND=50, OPERATEUR_COMPARAISON_PLUS_PETIT=51, 
		OPERATEUR_COMPARAISON_PLUS_GRAND_OU_EGAL=52, OPERATEUR_COMPARAISON_PLUS_PETIT_OU_EGAL=53, 
		VRAI=54, FAUX=55, ET=56, OPERATEUR_LOGIQUE_ET=57, OPERATEUR_LOGIQUE_OU=58, 
		OPERATEUR_LOGIQUE_OU_EXCLUSIF=59, OPERATEUR_LOGIQUE_EST=60, OPERATEUR_LOGIQUE_NON=61, 
		OPERATEUR_MATH_EGAL=62, VARIABLE=63, PREFIXE_VARIABLE=64, PARENTHESE_GAUCHE=65, 
		PARENTHESE_DROITE=66, LA_VALEUR=67, LE_TEXTE=68, VALEUR_TEXTE=69, LE_NOMBRE=70, 
		VALEUR_NOMBRE=71, OPERATEUR_MATH_PLUS=72, OPERATEUR_MATH_MOINS=73, OPERATEUR_MATH_FOIS=74, 
		OPERATEUR_MATH_DIVISE=75, OPERATEUR_MATH_PUISSANCE=76, OPERATEUR_MATH_RACINE_CARREE=77, 
		VIRGULE=78, POINT=79, POINT_INTERROGATION=80, SUIVANT=81, DEUX_POINT=82, 
		FOIS=83, TABULATION=84, RETOUR_DE_CHARIOT=85, MOT=86, ESPACE=87, COMMENTAIRE_LIGNE=88, 
		COMMENTAIRE=89;
	public const int
		RULE_programme = 0, RULE_entete = 1, RULE_auteur = 2, RULE_date = 3, RULE_entreprise = 4, 
		RULE_description = 5, RULE_mainStart = 6, RULE_mainEnd = 7, RULE_instruction = 8, 
		RULE_noop = 9, RULE_instruction_simple = 10, RULE_instruction_complexe = 11, 
		RULE_afficher = 12, RULE_allouer = 13, RULE_affecter = 14, RULE_recuperer = 15, 
		RULE_placer_curseur = 16, RULE_generer_aleatoire = 17, RULE_dormir = 18, 
		RULE_colorier = 19, RULE_la_zone_memoire = 20, RULE_une_zone_memoire = 21, 
		RULE_boucle = 22, RULE_boucle_avec_variable = 23, RULE_selection = 24, 
		RULE_base_si = 25, RULE_sinon_si = 26, RULE_sinon = 27, RULE_expression = 28, 
		RULE_expression_comparable = 29, RULE_expression_booleenne = 30, RULE_expression_numerique = 31, 
		RULE_expression_textuelle = 32, RULE_atome_textuel = 33, RULE_atome_numerique = 34, 
		RULE_variable = 35, RULE_chaine_de_caractere = 36, RULE_nombre = 37;
	public static readonly string[] ruleNames = {
		"programme", "entete", "auteur", "date", "entreprise", "description", 
		"mainStart", "mainEnd", "instruction", "noop", "instruction_simple", "instruction_complexe", 
		"afficher", "allouer", "affecter", "recuperer", "placer_curseur", "generer_aleatoire", 
		"dormir", "colorier", "la_zone_memoire", "une_zone_memoire", "boucle", 
		"boucle_avec_variable", "selection", "base_si", "sinon_si", "sinon", "expression", 
		"expression_comparable", "expression_booleenne", "expression_numerique", 
		"expression_textuelle", "atome_textuel", "atome_numerique", "variable", 
		"chaine_de_caractere", "nombre"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Afficher'", "'Insérer'", "'Copier'", "'dans'", "'Récupérer la saisie et la stocker dans'", 
		"'Placer le curseur à la'", "'ligne'", "'colonne'", "'Placer un nombre aléatoire compris entre '", 
		"'Attendre'", "'ms'", "'Choisir la couleur'", "'rouge'", "'vert'", "'bleu'", 
		"'blanc'", "'noir'", "'gris'", "'foncé'", "'pour le'", "'texte'", "'fond'", 
		"'la'", "'une'", "'Répéter'", "'tant que'", "'autant de fois qu'il y a de '", 
		"'le nombre de fois correspondant à'", "'Si'", "'alors'", "'sinon si'", 
		"'et sinon'", "'de'", "'enregistrée dans'", "'Auteur:'", "'Date:'", null, 
		"'Entreprise:'", "'Description:'", "'Voici les ordres du programme'", 
		"'à classer dans la bibliothèque'", "'Fin'", "'de la transmission'", null, 
		null, "'zone mémoire'", "'nommée'", null, null, null, null, null, null, 
		null, null, "'et'", "'&&'", null, null, "'est'", null, "'='", null, "'#'", 
		"'('", "')'", "'la valeur'", "'le texte'", null, "'le nombre'", null, 
		null, null, null, null, null, "'racine carrée de'", "','", "'.'", "'?'", 
		"'>>'", "':'", "'x'", null, null, null, "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "LABEL_AUTEUR", 
		"LABEL_DATE", "CONTENU_DATE", "ENTREPRISE_ENTETE", "DESCRIPTION_ENTETE", 
		"DEBUT", "BIBLIOTHEQUE", "FIN", "DE_LA_TRANSMISSION", "ALLOUER_TERME", 
		"INITIALISATION_TERME", "ZONE_MEMOIRE", "ZONE_NOM", "OPERATEUR_COMPARAISON_EQUIVALENT", 
		"OPERATEUR_COMPARAISON_DIFFERENT", "OPERATEUR_COMPARAISON_PLUS_GRAND", 
		"OPERATEUR_COMPARAISON_PLUS_PETIT", "OPERATEUR_COMPARAISON_PLUS_GRAND_OU_EGAL", 
		"OPERATEUR_COMPARAISON_PLUS_PETIT_OU_EGAL", "VRAI", "FAUX", "ET", "OPERATEUR_LOGIQUE_ET", 
		"OPERATEUR_LOGIQUE_OU", "OPERATEUR_LOGIQUE_OU_EXCLUSIF", "OPERATEUR_LOGIQUE_EST", 
		"OPERATEUR_LOGIQUE_NON", "OPERATEUR_MATH_EGAL", "VARIABLE", "PREFIXE_VARIABLE", 
		"PARENTHESE_GAUCHE", "PARENTHESE_DROITE", "LA_VALEUR", "LE_TEXTE", "VALEUR_TEXTE", 
		"LE_NOMBRE", "VALEUR_NOMBRE", "OPERATEUR_MATH_PLUS", "OPERATEUR_MATH_MOINS", 
		"OPERATEUR_MATH_FOIS", "OPERATEUR_MATH_DIVISE", "OPERATEUR_MATH_PUISSANCE", 
		"OPERATEUR_MATH_RACINE_CARREE", "VIRGULE", "POINT", "POINT_INTERROGATION", 
		"SUIVANT", "DEUX_POINT", "FOIS", "TABULATION", "RETOUR_DE_CHARIOT", "MOT", 
		"ESPACE", "COMMENTAIRE_LIGNE", "COMMENTAIRE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cosmos.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CosmosParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgrammeContext : ParserRuleContext {
		public EnteteContext entete() {
			return GetRuleContext<EnteteContext>(0);
		}
		public MainStartContext mainStart() {
			return GetRuleContext<MainStartContext>(0);
		}
		public MainEndContext mainEnd() {
			return GetRuleContext<MainEndContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CosmosParser.Eof, 0); }
		public ITerminalNode[] RETOUR_DE_CHARIOT() { return GetTokens(CosmosParser.RETOUR_DE_CHARIOT); }
		public ITerminalNode RETOUR_DE_CHARIOT(int i) {
			return GetToken(CosmosParser.RETOUR_DE_CHARIOT, i);
		}
		public InstructionContext[] instruction() {
			return GetRuleContexts<InstructionContext>();
		}
		public InstructionContext instruction(int i) {
			return GetRuleContext<InstructionContext>(i);
		}
		public NoopContext[] noop() {
			return GetRuleContexts<NoopContext>();
		}
		public NoopContext noop(int i) {
			return GetRuleContext<NoopContext>(i);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programme; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterProgramme(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitProgramme(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramme(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgrammeContext programme() {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_programme);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; entete();
			State = 78;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 77; Match(RETOUR_DE_CHARIOT);
				}
				}
				State = 80;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==RETOUR_DE_CHARIOT );
			State = 82; mainStart();
			State = 85;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 85;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					State = 83; instruction();
					}
					break;
				case 2:
					{
					State = 84; noop();
					}
					break;
				}
				}
				State = 87;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==TABULATION || _la==RETOUR_DE_CHARIOT );
			State = 89; mainEnd();
			State = 93;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 90;
					MatchWildcard();
					}
					} 
				}
				State = 95;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			State = 96; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnteteContext : ParserRuleContext {
		public AuteurContext auteur() {
			return GetRuleContext<AuteurContext>(0);
		}
		public ITerminalNode[] RETOUR_DE_CHARIOT() { return GetTokens(CosmosParser.RETOUR_DE_CHARIOT); }
		public ITerminalNode RETOUR_DE_CHARIOT(int i) {
			return GetToken(CosmosParser.RETOUR_DE_CHARIOT, i);
		}
		public DateContext date() {
			return GetRuleContext<DateContext>(0);
		}
		public EntrepriseContext entreprise() {
			return GetRuleContext<EntrepriseContext>(0);
		}
		public DescriptionContext description() {
			return GetRuleContext<DescriptionContext>(0);
		}
		public EnteteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entete; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterEntete(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitEntete(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntete(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnteteContext entete() {
		EnteteContext _localctx = new EnteteContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_entete);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; auteur();
			State = 99; Match(RETOUR_DE_CHARIOT);
			State = 100; date();
			State = 101; Match(RETOUR_DE_CHARIOT);
			State = 102; entreprise();
			State = 103; Match(RETOUR_DE_CHARIOT);
			State = 104; description();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AuteurContext : ParserRuleContext {
		public ITerminalNode LABEL_AUTEUR() { return GetToken(CosmosParser.LABEL_AUTEUR, 0); }
		public ITerminalNode[] MOT() { return GetTokens(CosmosParser.MOT); }
		public ITerminalNode MOT(int i) {
			return GetToken(CosmosParser.MOT, i);
		}
		public AuteurContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_auteur; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterAuteur(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitAuteur(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAuteur(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AuteurContext auteur() {
		AuteurContext _localctx = new AuteurContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_auteur);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(LABEL_AUTEUR);
			State = 107; Match(MOT);
			State = 109;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==MOT) {
				{
				State = 108; Match(MOT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateContext : ParserRuleContext {
		public ITerminalNode LABEL_DATE() { return GetToken(CosmosParser.LABEL_DATE, 0); }
		public ITerminalNode CONTENU_DATE() { return GetToken(CosmosParser.CONTENU_DATE, 0); }
		public DateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_date; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterDate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitDate(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateContext date() {
		DateContext _localctx = new DateContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_date);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(LABEL_DATE);
			State = 112; Match(CONTENU_DATE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntrepriseContext : ParserRuleContext {
		public ITerminalNode ENTREPRISE_ENTETE() { return GetToken(CosmosParser.ENTREPRISE_ENTETE, 0); }
		public ITerminalNode MOT() { return GetToken(CosmosParser.MOT, 0); }
		public EntrepriseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entreprise; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterEntreprise(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitEntreprise(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntreprise(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntrepriseContext entreprise() {
		EntrepriseContext _localctx = new EntrepriseContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_entreprise);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(ENTREPRISE_ENTETE);
			State = 115; Match(MOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DescriptionContext : ParserRuleContext {
		public ITerminalNode DESCRIPTION_ENTETE() { return GetToken(CosmosParser.DESCRIPTION_ENTETE, 0); }
		public ITerminalNode[] MOT() { return GetTokens(CosmosParser.MOT); }
		public ITerminalNode MOT(int i) {
			return GetToken(CosmosParser.MOT, i);
		}
		public ITerminalNode[] VIRGULE() { return GetTokens(CosmosParser.VIRGULE); }
		public ITerminalNode VIRGULE(int i) {
			return GetToken(CosmosParser.VIRGULE, i);
		}
		public ITerminalNode[] RETOUR_DE_CHARIOT() { return GetTokens(CosmosParser.RETOUR_DE_CHARIOT); }
		public ITerminalNode RETOUR_DE_CHARIOT(int i) {
			return GetToken(CosmosParser.RETOUR_DE_CHARIOT, i);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_description; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterDescription(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitDescription(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDescription(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DescriptionContext description() {
		DescriptionContext _localctx = new DescriptionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_description);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(DESCRIPTION_ENTETE);
			State = 119;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 118; Match(MOT);
				}
				}
				State = 121;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==MOT );
			State = 132;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==VIRGULE) {
				{
				{
				State = 123; Match(VIRGULE);
				State = 124; Match(RETOUR_DE_CHARIOT);
				State = 126;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 125; Match(MOT);
					}
					}
					State = 128;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==MOT );
				}
				}
				State = 134;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainStartContext : ParserRuleContext {
		public IToken nomDuProgramme;
		public IToken bibliotheque;
		public ITerminalNode DEBUT() { return GetToken(CosmosParser.DEBUT, 0); }
		public ITerminalNode DEUX_POINT() { return GetToken(CosmosParser.DEUX_POINT, 0); }
		public ITerminalNode[] MOT() { return GetTokens(CosmosParser.MOT); }
		public ITerminalNode MOT(int i) {
			return GetToken(CosmosParser.MOT, i);
		}
		public ITerminalNode BIBLIOTHEQUE() { return GetToken(CosmosParser.BIBLIOTHEQUE, 0); }
		public MainStartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainStart; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.EnterMainStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICosmosListener typedListener = listener as ICosmosListener;
			if (typedListener != null) typedListener.ExitMainStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICosmosVisitor<TResult> typedVisitor = visitor as ICosmosVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMainStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainStartContext mainStart() {
		MainStartContext _localctx = new MainStartContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_mainStart);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(DEBUT);
			State = 136; _localctx.nomDuProgramme = Match(MOT);
			State = 139;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==BIBLIOTHEQUE) {
				{
				State = 137; Match(BIBLIOTHEQUE);
				State = 138; _localctx.bibliotheque = Match(MOT);
				}
			}

			State = 141; Match(DEUX_POINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
